# rustover_bug

./: Cargo.toml
core/: Cargo.toml
core/prisma/: dev.db  dev.db-journal  schema.prisma
core/prisma/migrations/20230929015312_initial/: migration.sql
core/prisma/src/: main.rs
core/src/: main.rs  prisma.rs
